[project]
name = "database-manager"
version = "0.1.1"
description = "A command-line utility for idempotent database user and access management across different database systems (MongoDB, MySQL, PostgreSQL). Ensures users and permissions exist without duplicates."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "pymongo>=4.11.1",
]
